fix spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -62,7 +62,6 @@
   height: calc(50%);
   position: absolute;
   top: 20px;
-  width: calc(4%);
   z-index: 1;
 }
 
